# anlp-group-project

./: .gitignore  assignment_notebook.ipynb  assignment_submission_template.docx  assignment_submission_template.tex  eval_metrics.py  evaluate_models.py  jamie_anlp_assignment_notebook.ipynb  jamie_notebook.ipynb  koch_anlp_assignment_notebook.ipynb  pyproject.toml  rope_marian.py  semi_rope_marian.py  train_semi_rope.py
